<resources>
    <string name="app_name">MusicallyTheLife</string>
    <string name="title_home">Home</string>
    <string name="title_playlist">Playlist</string>
    <string name="content_description_button_play_pause">content description button that can be play or pause</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lyrics">Lyrics</string>
    <string name="song_title">Song title</string>
    <string name="artist_name">Artist</string>
    <string name="now_playing">Now playing</string>
    <string name="_0_00">0:00</string>
    <string name="_4_12">4:12</string>
    <string name="more_info">More Info</string>
</resources>