<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicPlayerActivity">

    <View
        android:id="@+id/viewSupporterForBackground"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/layoutPlayer"
        app:layout_constraintStart_toStartOf="@id/layoutPlayer"
        app:layout_constraintTop_toTopOf="@id/layoutPlayer" />

    <View
        android:id="@+id/viewSupporterForAlbumArt"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/layoutPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/gray_200"
        app:layout_constraintBottom_toTopOf="@id/viewSupporterForAlbumArt"
        app:layout_constraintEnd_toStartOf="@id/viewSupporterForAlbumArt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/gray_200"
        app:layout_constraintBottom_toTopOf="@id/viewSupporterForBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <ImageView
        android:id="@+id/image_album_art"
        android:layout_width="200dp"
        android:layout_height="260dp"
        android:contentDescription="@string/app_name"
        android:background="@color/white"
        android:src="@drawable/creature_cat_derp"
        app:layout_constraintBottom_toBottomOf="@id/viewSupporterForAlbumArt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewSupporterForAlbumArt" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/song_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/image_album_art" />

    <TextView
        android:id="@+id/text_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/artist_name"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <TextView
        android:id="@+id/text_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/now_playing"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_name"
        android:rotation="-90"
        android:src="@drawable/ic_up"
        app:layout_constraintBottom_toBottomOf="@id/text_now_playing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_now_playing" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@id/text_now_playing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_now_playing" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/player_background"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/more_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/more_info"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/image_lyrics"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_up"
            app:layout_constraintBottom_toTopOf="@id/more_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/yellow_200" />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/play_button_background"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/ic_play_arrow"
            android:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/image_lyrics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/button_previous"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/next_previous_button_background"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_previous"
            android:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintEnd_toStartOf="@id/button_play"
            app:layout_constraintTop_toTopOf="@id/button_play" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/next_previous_button_background"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_next"
            android:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintStart_toEndOf="@id/button_play"
            app:layout_constraintTop_toTopOf="@id/button_play" />

        <ImageButton
            android:id="@+id/button_shuffle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_shuffle"
            android:tint="@color/yellow_200"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_play" />

        <ImageButton
            android:id="@+id/button_repeat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_repeat"
            android:tint="@color/yellow_200"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_play" />

        <SeekBar
            android:id="@+id/player_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:progressTint="@color/brown"
            android:thumbTint="@color/brown"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:progress="0"
            app:layout_constraintBottom_toTopOf="@id/button_play" />

        <TextView
            android:id="@+id/text_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_0_00"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/player_seekbar"
            app:layout_constraintStart_toStartOf="@id/player_seekbar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_4_12"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/player_seekbar"
            app:layout_constraintEnd_toEndOf="@id/player_seekbar"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>